# PicoPiUSBMidiHostDevice

./: LICENSE  README.md
midi_host_dev_ssd/: CMakeLists.txt
midi_host_dev_ssd/src/: main.bak  main.c  ssd1306.c  tusb_config.h  usb_descriptors.c
